fix: fixing compatibility test